[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemies/ShootingRing/shootingRingMain.gd" type="Script" id=1]
[ext_resource path="res://Resources/Textures/ringTexture.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 106.072

[node name="shootingRingMain" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = -2147483646
collision_mask = 4
script = ExtResource( 1 )

[node name="shootingRingSprite" type="Sprite" parent="."]
scale = Vector2( 0.43, 0.43 )
texture = ExtResource( 2 )

[node name="shootingRingCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="generalTween" type="Tween" parent="."]

[node name="shootingNode" type="Node2D" parent="."]

[node name="parentNode" type="Node" parent="."]
